# hybrid_sdk

./: .gitmodules  README.md
hybrid_adb/hybrid_adb/: README.md  pubspec.yaml
hybrid_adb/hybrid_adb/example/: README.md  pubspec.yaml
hybrid_adb/hybrid_adb/lib/: hybrid_adb.dart
hybrid_adb/hybrid_adb_macos/: .metadata  README.md  pubspec.yaml
hybrid_adb/hybrid_adb_macos/example/: README.md  pubspec.yaml
hybrid_adb/hybrid_adb_macos/lib/: hybrid_adb_macos.dart  hybrid_adb_macos_method_channel.dart  hybrid_adb_macos_platform_interface.dart
hybrid_adb/hybrid_adb_macos/macos/: hybrid_adb_macos.podspec
hybrid_adb/hybrid_adb_macos/test/: hybrid_adb_macos_method_channel_test.dart  hybrid_adb_macos_test.dart
hybrid_adb/hybrid_adb_platform_interface/: README.md  pubspec.yaml
hybrid_adb/hybrid_adb_platform_interface/lib/: hybrid_adb_platform_interface.dart
hybrid_adb/hybrid_adb_windows/: .metadata  README.md  pubspec.yaml
hybrid_adb/hybrid_adb_windows/example/: README.md  (+1 more)
hybrid_core/hybrid_core/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_core/hybrid_core_android/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
hybrid_core/hybrid_core_android/src/: CMakeLists.txt  hybrid_core_android.c
hybrid_core/hybrid_core_darwin/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_core/hybrid_core_linux/: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
hybrid_core/hybrid_core_platform_interface/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
hybrid_core/hybrid_core_windows/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_core/hybrid_core_windows/src/: CMakeLists.txt
hybrid_jpeg/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_jpeg/android/: build.gradle  settings.gradle
hybrid_jpeg/example/: README.md  pubspec.yaml
hybrid_jpeg/ios/: hybrid_jpeg.podspec
hybrid_jpeg/lib/: hybrid_jpeg.dart
hybrid_jpeg/linux/: CMakeLists.txt  hybrid_jpeg_plugin.cc  hybrid_jpeg_plugin_private.h
hybrid_jpeg/macos/: hybrid_jpeg.podspec
hybrid_jpeg/windows/: CMakeLists.txt  hybrid_jpeg_plugin.cpp  hybrid_jpeg_plugin.h  hybrid_jpeg_plugin_c_api.cpp
hybrid_logging/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_logging/lib/: hybrid_logging.dart
hybrid_media/hybrid_media/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_media/hybrid_media_android/: CHANGELOG.md  README.md  jnigen.yaml  pubspec.yaml
hybrid_media/hybrid_media_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_os/hybrid_os/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_os/hybrid_os_android/: CHANGELOG.md  README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
hybrid_os/hybrid_os_darwin/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_os/hybrid_os_darwin/src/: CMakeLists.txt  ffi.g.m  hybrid_os_darwin.c
hybrid_os/hybrid_os_linux/: CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
hybrid_os/hybrid_os_linux/src/: CMakeLists.txt  hybrid_os_linux.c
hybrid_os/hybrid_os_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_os/hybrid_os_windows/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_os/hybrid_os_windows/src/: CMakeLists.txt  hybrid_os_windows.c
hybrid_ui/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_ui/example/: README.md  pubspec.yaml
hybrid_ui/lib/: hybrid_ui.dart
hybrid_usb/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_usb/android/: build.gradle  settings.gradle
hybrid_usb/example/: README.md  pubspec.yaml
hybrid_usb/ios/: hybrid_usb.podspec
hybrid_usb/lib/: hybrid_usb.dart
hybrid_usb/linux/: CMakeLists.txt  hybrid_usb_plugin.cc  hybrid_usb_plugin_private.h
hybrid_usb/macos/: hybrid_usb.podspec
hybrid_usb/windows/: CMakeLists.txt  hybrid_usb_plugin.cpp  hybrid_usb_plugin.h  hybrid_usb_plugin_c_api.cpp
hybrid_uvc/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
hybrid_uvc/android/: build.gradle  settings.gradle
hybrid_uvc/example/: README.md  pubspec.yaml
hybrid_uvc/ios/: hybrid_uvc.podspec
hybrid_uvc/lib/: hybrid_uvc.dart  hybrid_uvc_bindings_generated.dart
hybrid_uvc/linux/: CMakeLists.txt  hybrid_uvc_plugin.cc  hybrid_uvc_plugin_private.h
hybrid_uvc/macos/: hybrid_uvc.podspec
hybrid_uvc/src/: CMakeLists.txt  hybrid_uvc.c
hybrid_uvc/windows/: CMakeLists.txt  hybrid_uvc_plugin.cpp  hybrid_uvc_plugin.h  hybrid_uvc_plugin_c_api.cpp
hybrid_v4l2/: .metadata  README.md  api.dart  ffigen.c.yaml  ffigen.hybrid.yaml  ffigen.hybrid_v4l2.yaml  ffigen.ioctl.yaml  ffigen.v4l2.yaml  ffigen.yaml  ffigen.yuv.yaml  pubspec.yaml
hybrid_v4l2/elinux/: CMakeLists.txt  hybrid_v4l2_api.cc  hybrid_v4l2_api.h  hybrid_v4l2_plugin.cc  hybrid_v4l2_texture.cc  hybrid_v4l2_texture.h  hybrid_v4l2_view_api.cc  hybrid_v4l2_view_api.h
hybrid_v4l2/elinux/include/hybrid_v4l2/: hybrid_v4l2_plugin.h
hybrid_v4l2/example/: .metadata  README.md  pubspec.yaml
hybrid_v4l2/lib/: hybrid_v4l2.dart
hybrid_v4l2/linux/: CMakeLists.txt  hybrid_v4l2_api.cc  hybrid_v4l2_api.h  hybrid_v4l2_plugin.cc  hybrid_v4l2_plugin_private.h  hybrid_v4l2_texture.cc  hybrid_v4l2_texture.h
hybrid_v4l2/src/: CMakeLists.txt  hybrid_v4l2.c  hybrid_v4l2.h
hybrid_vision/hybrid_vision/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_vision/hybrid_vision_android/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
hybrid_vision/hybrid_vision_android/src/: CMakeLists.txt  hybrid_vision_android.c
hybrid_vision/hybrid_vision_darwin/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
hybrid_vision/hybrid_vision_darwin/src/: CMakeLists.txt  hybrid_vision_darwin.c
hybrid_vision/hybrid_vision_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
hybrid_yuv/: README.md  ffigen.yaml  pubspec.yaml
hybrid_yuv/android/: build.gradle  settings.gradle
hybrid_yuv/example/: README.md  pubspec.yaml
hybrid_yuv/ios/: hybrid_yuv.podspec
hybrid_yuv/linux/: CMakeLists.txt
hybrid_yuv/macos/: hybrid_yuv.podspec
hybrid_yuv/windows/: CMakeLists.txt
(+775 files in other folders)
